--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,18 @@ Update Manifest:
             containers:
               - name: row-major-web-content
                 image: gcr.io/bomsync-214520/webalator:${CI_COMMIT_SHA}
+      ---
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: sharded-controller
+        namespace: sharded-controller
+      spec:
+        template:
+          spec:
+            containers:
+              - name: sharded-controller
+                image: gcr.io/bomsync-214520/shardedcontroller:${CI_COMMIT_SHA}
       EOF
     - |
       cat <<EOF >commit-message.txt
