--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Apply this namespace to all resources
-namespace: row-major-web
-
 resources:
 - row-major-web.yaml
+- sharded-controller.yaml
