--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 - name: 'gcr.io/cloud-marketplace-containers/google/bazel'
   entrypoint: 'bazel'
-  args: ['test', '--', '//...', '-//vendor/...']
+  args: ['test', '--', '//...']
 
 # Load our built webalator image into the local Docker cache.
 - name: 'gcr.io/cloud-marketplace-containers/google/bazel'
