--- a/manifests/base/sharded-controller.yaml
+++ b/manifests/base/sharded-controller.yaml
@@ -83,6 +83,7 @@ spec:
           - --shard_namespace=$(POD_NAMESPACE)
           - --shard_selector=app=sharded-controller
           - --self_pod_name=$(POD_NAME)
+          - --config_map_namespace=$(POD_NAMESPACE)
         env:
         - name: POD_NAME
           valueFrom:
