--- a/manifests/base/sharded-controller.yaml
+++ b/manifests/base/sharded-controller.yaml
@@ -29,6 +29,18 @@ rules:
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: sharded-controller
+  name: configmap-writer
+rules:
+- apiGroups: [""]
+  resources: ["configmaps"]
+  verbs: ["put", "patch"]
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: sharded-controller-is-a-sharder
@@ -52,6 +64,23 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: configmap-watcher
+subjects:
+- kind: ServiceAccount
+  namespace: sharded-controller
+  name: default
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  namespace: sharded-controller
+  name: sharded-controller-is-a-configmap-writer
+roleRef:
+  apiGroup: rbac.authoriztaion.k8s.io
+  kind: Role
+  namespace: sharded-controller
+  name: configmap-writer
 subjects:
 - kind: ServiceAccount
   namespace: sharded-controller
