--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -64,7 +64,7 @@ metadata:
   name: sharded-controller-is-a-configmap-writer
   namespace: sharded-controller
 roleRef:
-  apiGroup: rbac.authoriztaion.k8s.io
+  apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: configmap-writer
 subjects:
@@ -148,7 +148,7 @@ spec:
         - --enable-profiling
         - --enable-tracing
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:a1875578a0e6865e4031767c258628dfbc978652
+        image: gcr.io/bomsync-214520/webalator:44a5917a86dce6eb2f7cbc76457e1aa459ba4587
         livenessProbe:
           httpGet:
             path: /healthz
@@ -198,7 +198,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:a1875578a0e6865e4031767c258628dfbc978652
+        image: gcr.io/bomsync-214520/shardedcontroller:44a5917a86dce6eb2f7cbc76457e1aa459ba4587
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
