sharded-controller: Fix RBAC and error handling

--- a/manifests/base/sharded-controller.yaml
+++ b/manifests/base/sharded-controller.yaml
@@ -36,7 +36,7 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["configmaps"]
-  verbs: ["put", "patch"]
+  verbs: ["update", "patch"]
 
 ---
 
