--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -27,7 +27,7 @@ rules:
   resources:
   - configmaps
   verbs:
-  - put
+  - update
   - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -148,7 +148,7 @@ spec:
         - --enable-profiling
         - --enable-tracing
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:44a5917a86dce6eb2f7cbc76457e1aa459ba4587
+        image: gcr.io/bomsync-214520/webalator:c21a79bc8ba21e93d3c6b231951812db7be796c5
         livenessProbe:
           httpGet:
             path: /healthz
@@ -198,7 +198,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:44a5917a86dce6eb2f7cbc76457e1aa459ba4587
+        image: gcr.io/bomsync-214520/shardedcontroller:c21a79bc8ba21e93d3c6b231951812db7be796c5
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
