--- a/webalator/BUILD.bazel
+++ b/webalator/BUILD.bazel
@@ -37,6 +37,7 @@ go_library(
     deps = [
         "//webalator/healthz:go_default_library",
         "//webalator/httpmetrics:go_default_library",
+        "//webalator/imgalator:go_default_library",
         "//webalator/mdredir:go_default_library",
         "//webalator/site:go_default_library",
         "@com_google_cloud_go//compute/metadata:go_default_library",
