--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -148,7 +148,7 @@ spec:
         - --enable-profiling
         - --enable-tracing
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:d3e835b97a8c824c08f12edea3cea887bb441b9f
+        image: gcr.io/bomsync-214520/webalator:9d32df2db6da34b803607597727a76be763aee67
         livenessProbe:
           httpGet:
             path: /healthz
@@ -198,7 +198,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:d3e835b97a8c824c08f12edea3cea887bb441b9f
+        image: gcr.io/bomsync-214520/shardedcontroller:9d32df2db6da34b803607597727a76be763aee67
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
@@ -207,6 +207,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.global-static-ip-name: row-major-web
     networking.gke.io/managed-certificates: www-row-major-net,row-major-net
+    networking.gke.io/v1beta1.FrontendConfig: row-major-web
   labels:
     app: row-major-web
     component: ingress
@@ -216,6 +217,15 @@ spec:
   backend:
     serviceName: row-major-web-content-service
     servicePort: http
+---
+apiVersion: networking.gke.io/v1beta1
+kind: FrontendConfig
+metadata:
+  name: row-major-web
+spec:
+  redirectToHttps:
+    enabled: true
+    responseCodeName: FOUND
 ---
 apiVersion: networking.gke.io/v1beta1
 kind: ManagedCertificate
