Correct namespace of frontendconfig

--- a/manifests/base/row-major-web.yaml
+++ b/manifests/base/row-major-web.yaml
@@ -106,6 +106,7 @@ spec:
 apiVersion: networking.gke.io/v1beta1
 kind: FrontendConfig
 metadata:
+  namespace: row-major-web
   name: row-major-web
 spec:
   redirectToHttps:
