--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -6,6 +6,11 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: rumor-mill
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: sharded-controller
 ---
 apiVersion: v1
@@ -148,7 +153,7 @@ spec:
         - --enable-profiling
         - --enable-tracing
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:7be3e1fc424190225f0444cd63aaf7bff2643439
+        image: gcr.io/bomsync-214520/webalator:aab2efb5946ad186270f1de7020c1ced148087ae
         livenessProbe:
           httpGet:
             path: /healthz
@@ -165,6 +170,46 @@ spec:
           initialDelaySeconds: 10
           periodSeconds: 10
       serviceAccountName: webalator
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: rumor-mill
+  name: rumor-mill
+  namespace: rumor-mill
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: rumor-mill
+  template:
+    metadata:
+      labels:
+        app: rumor-mill
+    spec:
+      containers:
+      - command:
+        - /app/rumor-mill/rumor-mill
+        - --debug-listen=0.0.0.0:8001
+        - --logtostderr=true
+        image: gcr.io/bomsync-214520/rumor-mill:aab2efb5946ad186270f1de7020c1ced148087ae
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8001
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        name: main
+        ports:
+        - containerPort: 8001
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: 8001
+          initialDelaySeconds: 10
+          periodSeconds: 10
+      serviceAccountName: default
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -198,7 +243,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:7be3e1fc424190225f0444cd63aaf7bff2643439
+        image: gcr.io/bomsync-214520/shardedcontroller:aab2efb5946ad186270f1de7020c1ced148087ae
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
