--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,5 +87,5 @@ Apply Manifest:
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
     - "gcloud auth activate-service-account --key-file=${GCP_SA_KEY_FILE}"
-    - "gcloud --project=bomsync-214520 builds submit ./ --config=cloudbuild-deploy.yaml --timeout=10m --substitutions=COMMIT_SHA=${CI_COMMIT_SHA}"
+    - "gcloud --project=bomsync-214520 builds submit ./ --config=cloudbuild-deploy.yaml --timeout=10m
 
