--- a/rumor-mill/BUILD.bazel
+++ b/rumor-mill/BUILD.bazel
@@ -29,6 +29,9 @@ go_library(
         "//rumor-mill/scraper:go_default_library",
         "//webalator/healthz:go_default_library",
         "@com_github_golang_glog//:go_default_library",
+        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_metric//:go_default_library",
+        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:go_default_library",
+        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
     ],
 )
 
