--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -153,7 +153,7 @@ spec:
         - --enable-profiling
         - --enable-tracing
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:eb19d4be234010517d85f30ba98a529a3c3155e8
+        image: gcr.io/bomsync-214520/webalator:959b9371d6b2037169fd120c50d9faf2fe244426
         livenessProbe:
           httpGet:
             path: /healthz
@@ -193,7 +193,9 @@ spec:
         - /app/rumor-mill/rumor-mill
         - --debug-listen=0.0.0.0:8001
         - --logtostderr=true
-        image: gcr.io/bomsync-214520/rumor-mill:eb19d4be234010517d85f30ba98a529a3c3155e8
+        - --monitoring=true
+        - --monitoring-trace-ratio=1.0
+        image: gcr.io/bomsync-214520/rumor-mill:959b9371d6b2037169fd120c50d9faf2fe244426
         livenessProbe:
           httpGet:
             path: /healthz
@@ -243,7 +245,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:eb19d4be234010517d85f30ba98a529a3c3155e8
+        image: gcr.io/bomsync-214520/shardedcontroller:959b9371d6b2037169fd120c50d9faf2fe244426
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
