Add OpenTelemetry tracing to webalator

--- a/manifests/base/row-major-web.yaml
+++ b/manifests/base/row-major-web.yaml
@@ -80,8 +80,10 @@ spec:
             - --template-dir=webalator/content
             - --listen=0.0.0.0:8080
             - --debug-listen=0.0.0.0:8081
+            - --logtostderr=true
             - --enable-profiling
             - --enable-tracing
+            - --tracing-ratio=1.0
             - --enable-metrics
           
 ---
