--- a/rumor-mill/BUILD.bazel
+++ b/rumor-mill/BUILD.bazel
@@ -31,6 +31,7 @@ go_library(
         "@com_github_golang_glog//:go_default_library",
         "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_metric//:go_default_library",
         "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:go_default_library",
+        "@com_google_cloud_go_storage//:go_default_library",
         "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
     ],
 )
