--- a/rumor-mill/scraper/BUILD.bazel
+++ b/rumor-mill/scraper/BUILD.bazel
@@ -9,7 +9,12 @@ go_library(
         "//rumor-mill/hackernews:go_default_library",
         "//rumor-mill/scraper/trackerpb:go_default_library",
         "@com_github_golang_glog//:go_default_library",
+        "@com_google_cloud_go_storage//:go_default_library",
         "@io_opentelemetry_go_otel//:go_default_library",
+        "@io_opentelemetry_go_otel//attribute:go_default_library",
+        "@io_opentelemetry_go_otel//codes:go_default_library",
         "@io_opentelemetry_go_otel_trace//:go_default_library",
+        "@org_golang_google_api//iterator:go_default_library",
+        "@org_golang_google_protobuf//proto:go_default_library",
     ],
 )
