--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -155,7 +155,7 @@ spec:
         - --enable-tracing
         - --tracing-ratio=1.0
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:7eb69be41f0dad2f09cbe27c64012600c880210c
+        image: gcr.io/bomsync-214520/webalator:2e929028034c98a9c98d1e0a48dee3a0a5d908e7
         livenessProbe:
           httpGet:
             path: /healthz
@@ -196,8 +196,9 @@ spec:
         - --debug-listen=0.0.0.0:8001
         - --logtostderr=true
         - --monitoring=true
-        - --monitoring-trace-ratio=0.1
-        image: gcr.io/bomsync-214520/rumor-mill:7eb69be41f0dad2f09cbe27c64012600c880210c
+        - --monitoring-trace-ratio=1.0
+        - --data-dir=rumor-mill-state-prod-us-west1
+        image: gcr.io/bomsync-214520/rumor-mill:2e929028034c98a9c98d1e0a48dee3a0a5d908e7
         livenessProbe:
           httpGet:
             path: /healthz
@@ -247,7 +248,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:7eb69be41f0dad2f09cbe27c64012600c880210c
+        image: gcr.io/bomsync-214520/shardedcontroller:2e929028034c98a9c98d1e0a48dee3a0a5d908e7
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
