--- a/rumor-mill/scraper/BUILD.bazel
+++ b/rumor-mill/scraper/BUILD.bazel
@@ -14,7 +14,11 @@ go_library(
         "@io_opentelemetry_go_otel//attribute:go_default_library",
         "@io_opentelemetry_go_otel//codes:go_default_library",
         "@io_opentelemetry_go_otel_trace//:go_default_library",
+        "@org_golang_google_api//googleapi:go_default_library",
         "@org_golang_google_api//iterator:go_default_library",
+        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
+        "@org_golang_x_sync//errgroup:go_default_library",
+        "@org_golang_x_sync//semaphore:go_default_library",
     ],
 )
