--- a/rumor-mill/table/BUILD.bazel
+++ b/rumor-mill/table/BUILD.bazel
@@ -2,12 +2,16 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["trackedarticle.go"],
+    srcs = [
+        "stale-tracked-article.go",
+        "trackedarticle.go",
+    ],
     importpath = "row-major/rumor-mill/table",
     visibility = ["//visibility:public"],
     deps = [
         "//rumor-mill/table/trackerpb:go_default_library",
         "@com_google_cloud_go_storage//:go_default_library",
+        "@in_gopkg_errgo_v2//errors:go_default_library",
         "@io_opentelemetry_go_otel//:go_default_library",
         "@io_opentelemetry_go_otel//attribute:go_default_library",
         "@io_opentelemetry_go_otel//codes:go_default_library",
