--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -155,7 +155,7 @@ spec:
         - --enable-tracing
         - --tracing-ratio=1.0
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:77c095fbae4d8079fc60ec1bbd382697490755e8
+        image: gcr.io/bomsync-214520/webalator:bc93c177bdcb7016967b61561745d6748fbd1da0
         livenessProbe:
           httpGet:
             path: /healthz
@@ -181,7 +181,7 @@ metadata:
   name: rumor-mill
   namespace: rumor-mill
 spec:
-  replicas: 0
+  replicas: 1
   selector:
     matchLabels:
       app: rumor-mill
@@ -198,7 +198,8 @@ spec:
         - --monitoring=true
         - --monitoring-trace-ratio=0.1
         - --data-dir=rumor-mill-state-prod-us-west1
-        image: gcr.io/bomsync-214520/rumor-mill:77c095fbae4d8079fc60ec1bbd382697490755e8
+        - --scrape-period=30m
+        image: gcr.io/bomsync-214520/rumor-mill:bc93c177bdcb7016967b61561745d6748fbd1da0
         livenessProbe:
           httpGet:
             path: /healthz
@@ -248,7 +249,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:77c095fbae4d8079fc60ec1bbd382697490755e8
+        image: gcr.io/bomsync-214520/shardedcontroller:bc93c177bdcb7016967b61561745d6748fbd1da0
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
