--- a/rumor-mill/scraper/BUILD.bazel
+++ b/rumor-mill/scraper/BUILD.bazel
@@ -10,6 +10,8 @@ go_library(
         "//rumor-mill/table:go_default_library",
         "//rumor-mill/table/trackerpb:go_default_library",
         "@com_github_golang_glog//:go_default_library",
+        "@com_github_sendgrid_sendgrid_go//:go_default_library",
+        "@com_github_sendgrid_sendgrid_go//helpers/mail:go_default_library",
         "@io_opentelemetry_go_otel//:go_default_library",
         "@io_opentelemetry_go_otel_trace//:go_default_library",
         "@org_golang_google_api//googleapi:go_default_library",
