--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -155,7 +155,7 @@ spec:
         - --enable-tracing
         - --tracing-ratio=1.0
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:bc93c177bdcb7016967b61561745d6748fbd1da0
+        image: gcr.io/bomsync-214520/webalator:7a7a7486b9958a98400ec369c5f272d76e424f66
         livenessProbe:
           httpGet:
             path: /healthz
@@ -195,11 +195,14 @@ spec:
         - /app/rumor-mill/rumor-mill
         - --debug-listen=0.0.0.0:8001
         - --logtostderr=true
+        - --v=9
         - --monitoring=true
+        - --monitoring-project=bomsync-214520
         - --monitoring-trace-ratio=0.1
+        - --data-project=rumor-mill-prod
         - --data-dir=rumor-mill-state-prod-us-west1
         - --scrape-period=30m
-        image: gcr.io/bomsync-214520/rumor-mill:bc93c177bdcb7016967b61561745d6748fbd1da0
+        image: gcr.io/bomsync-214520/rumor-mill:7a7a7486b9958a98400ec369c5f272d76e424f66
         livenessProbe:
           httpGet:
             path: /healthz
@@ -249,7 +252,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:bc93c177bdcb7016967b61561745d6748fbd1da0
+        image: gcr.io/bomsync-214520/shardedcontroller:7a7a7486b9958a98400ec369c5f272d76e424f66
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
