--- a/manifests/base/row-major-web.yaml
+++ b/manifests/base/row-major-web.yaml
@@ -85,6 +85,9 @@ spec:
             - --enable-tracing
             - --tracing-ratio=1.0
             - --enable-metrics
+          resources:
+          limits:
+            memory: 200Mi
           
 ---
 apiVersion: networking.gke.io/v1beta1
