--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -155,7 +155,9 @@ spec:
         - --enable-tracing
         - --tracing-ratio=1.0
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:7a7a7486b9958a98400ec369c5f272d76e424f66
+        image: gcr.io/bomsync-214520/webalator:8c9a677065ee629edf574fc9bb830c0811751ecc
+        limits:
+          memory: 200Mi
         livenessProbe:
           httpGet:
             path: /healthz
@@ -202,7 +204,7 @@ spec:
         - --data-project=rumor-mill-prod
         - --data-dir=rumor-mill-state-prod-us-west1
         - --scrape-period=30m
-        image: gcr.io/bomsync-214520/rumor-mill:7a7a7486b9958a98400ec369c5f272d76e424f66
+        image: gcr.io/bomsync-214520/rumor-mill:8c9a677065ee629edf574fc9bb830c0811751ecc
         livenessProbe:
           httpGet:
             path: /healthz
@@ -218,6 +220,9 @@ spec:
             port: 8001
           initialDelaySeconds: 10
           periodSeconds: 10
+        resources:
+          limits:
+            memory: 50Mi
       serviceAccountName: default
 ---
 apiVersion: apps/v1
@@ -252,7 +257,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:7a7a7486b9958a98400ec369c5f272d76e424f66
+        image: gcr.io/bomsync-214520/shardedcontroller:8c9a677065ee629edf574fc9bb830c0811751ecc
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
