--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -155,9 +155,7 @@ spec:
         - --enable-tracing
         - --tracing-ratio=1.0
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:8c9a677065ee629edf574fc9bb830c0811751ecc
-        limits:
-          memory: 200Mi
+        image: gcr.io/bomsync-214520/webalator:2ff4a2c062d92f94b1a58288723fcda4a120316e
         livenessProbe:
           httpGet:
             path: /healthz
@@ -173,6 +171,9 @@ spec:
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 10
+        resources:
+          limits:
+            memory: 200Mi
       serviceAccountName: webalator
 ---
 apiVersion: apps/v1
@@ -204,7 +205,7 @@ spec:
         - --data-project=rumor-mill-prod
         - --data-dir=rumor-mill-state-prod-us-west1
         - --scrape-period=30m
-        image: gcr.io/bomsync-214520/rumor-mill:8c9a677065ee629edf574fc9bb830c0811751ecc
+        image: gcr.io/bomsync-214520/rumor-mill:2ff4a2c062d92f94b1a58288723fcda4a120316e
         livenessProbe:
           httpGet:
             path: /healthz
@@ -257,7 +258,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:8c9a677065ee629edf574fc9bb830c0811751ecc
+        image: gcr.io/bomsync-214520/shardedcontroller:2ff4a2c062d92f94b1a58288723fcda4a120316e
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
