rumor-mill: Move watch configs into a GCS table

--- a/rumor-mill/table/BUILD.bazel
+++ b/rumor-mill/table/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "stale-tracked-article.go",
         "trackedarticle.go",
+        "watchconfig.go",
     ],
     importpath = "row-major/rumor-mill/table",
     visibility = ["//visibility:public"],
