--- a/webalator/BUILD.bazel
+++ b/webalator/BUILD.bazel
@@ -39,6 +39,7 @@ go_library(
         "//webalator/httpmetrics:go_default_library",
         "//webalator/imgalator:go_default_library",
         "//webalator/mdredir:go_default_library",
+        "//webalator/proxyipreflect:go_default_library",
         "//webalator/site:go_default_library",
         "@com_github_golang_glog//:go_default_library",
         "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:go_default_library",
