--- a/nodejs-test/BUILD.bazel
+++ b/nodejs-test/BUILD.bazel
@@ -1,6 +1,6 @@
-load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")
+# load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")
 
-nodejs_test(
-    name = "mytest",
-    srcs = ["mytest.js"],
-)
+# nodejs_test(
+#     name = "mytest",
+#     srcs = ["mytest.js"],
+# )
