webalator: Create packer utility

--- a/webalator/static-content/BUILD.bazel
+++ b/webalator/static-content/BUILD.bazel
@@ -1,5 +1,8 @@
 filegroup(
     name = "all_deploy",
-    srcs = glob(include = ["**/*"]),
+    srcs = glob(
+        include = ["**/*"],
+        exclude = ["**/BUILD.bazel"],
+    ),
     visibility = ["//webalator:__subpackages__"],
 )
