--- a/webalator/content/BUILD.bazel
+++ b/webalator/content/BUILD.bazel
@@ -3,3 +3,13 @@ filegroup(
     srcs = glob(include = ["**/*.html.tmpl"]),
     visibility = ["//webalator:__subpackages__"],
 )
+
+load("@//webalator/packer:packer.bzl", "webalator_content_pack")
+
+webalator_content_pack(
+    name = "row_major_content",
+    static_file_trim_prefix = "webalator/static-content/",
+    static_files = ["//webalator/static-content:all_deploy"],
+    template_file_trim_prefix = "webalator/content/",
+    template_files = [":all_deploy"],
+)
