webalator: Convert row-major.net to use contentpack
//webalator/packer is a utility and Bazel macro set for generating a
content pack from an on-disk layout.

//webalator:webalator is now set up to read from a contentpack.  For
now, the contentpack is still built into the docker image (included
via Bazel's data= attribute).

Next steps are to:

  * Simplify the content directory layout now that we don't need
  separate folders for static and template content.

  * Make webalator load the content pack from GCS (and possibly reload?)

--- a/manifests/base/row-major-web.yaml
+++ b/manifests/base/row-major-web.yaml
@@ -76,8 +76,7 @@ spec:
             periodSeconds: 10
           command:
             - /app/webalator/webalator
-            - --static-content-dir=webalator/static-content
-            - --template-dir=webalator/content
+            - --content-pack=file://webalator/row_major_content.webalator.zip
             - --listen=0.0.0.0:8080
             - --debug-listen=0.0.0.0:8081
             - --logtostderr=true
