--- a/webalator/BUILD.bazel
+++ b/webalator/BUILD.bazel
@@ -15,8 +15,8 @@ container_push(
     format = "Docker",
     image = ":webalator_image",
     registry = "gcr.io",
-    repository = "bomsync-214520/webalator",
-    tag = "{BUILD_TIMESTAMP}",
+    repository = "{STABLE_IMAGE_REPO}/webalator",
+    tag = "{STABLE_IMAGE_TAG}",
 )
 
 go_binary(
