--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ Test Everything:
   stage: test
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
+    - "gcloud auth activate-service-account --key-file=${GCP_SA_KEY_FILE}"
     - "curl -L https://releases.bazel.build/5.1.0/release/bazel-5.1.0-linux-x86_64 > bazel"
     - "chmod +x bazel"
     - "./bazel test --remote_cache=https://storage.googleapis.com/bazel-cache.row-major.net --google_default_credentials -- //..."
